--- a/client/src/components/ProductInformation/ProductInformation.css
+++ b/client/src/components/ProductInformation/ProductInformation.css
@@ -3,9 +3,8 @@
   grid-area: b;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   font-family: Arial, Helvetica, sans-serif;
-
   padding-left: 20px;
   padding-top: 15px;
   width: 425px;
@@ -15,6 +14,7 @@
   display: flex;
   font-size:10px;
   font-weight: 100;
+  padding-bottom: 10px;
 }
 
 .star {
@@ -37,22 +37,24 @@
 }
 
 .price {
-  font-size:15px;
+  padding-top: 10px;
+  font-size:18px;
   font-weight: 100;
 }
 
 .originalPrice {
-  font-size:15px;
+  font-size:18px;
   font-weight: 100;
   text-decoration: line-through;
 }
 
 .salePrice {
-  font-size:15px;
+  font-size:18px;
   font-weight: 100;
   color: red;
 }
 
 .discount {
+  padding-top: 10px;
   font-size: 13px;
 }
